# MatchSum

./: .gitignore  README.md  dataset.py  model.py  pyproject.toml
preprocess/: create_sentence_ranking.py  get_candidate.py
