[tool.poetry]
name = "MatchSumm fork"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.4.0"
fastNLP = "0.5.0"
rouge = "1.0.0"
transformers = "2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
