[tool.poetry]
name = "MatchSumm fork"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
rouge = "1.0.0"
transformers = "^4.9.2"
sklearn = "^0.0"
tqdm = "^4.62.1"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
